--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: "7"
+          version: 9.3.0
       - name: Install dependencies
         run: pnpm i --no-frozen-lockfile
       - name: build
