--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
-          version: "7"
+          version: 9.3.0
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
       - name: Upgrade dependencies
