--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "playwright": "^1.44.1"
+    "playwright": "^1.44.1",
+    "tsx": "^4.15.5"
   },
   "pnpm": {},
   "main": "lib/index.js",
