feat: adds scrape task

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -179,6 +179,14 @@
         }
       ]
     },
+    "scrape": {
+      "name": "scrape",
+      "steps": [
+        {
+          "exec": "tsx src/index.ts"
+        }
+      ]
+    },
     "test": {
       "name": "test",
       "description": "Run tests",
