feat: run scrape task

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,8 @@ jobs:
         run: pnpm i --no-frozen-lockfile
       - name: build
         run: npx projen build
+      - name: Scrape
+        run: npx projen scrape
       - name: Find mutations
         id: self_mutation
         run: |-
