feat: adds `playwright install` to both tasks

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -131,6 +131,9 @@
       "steps": [
         {
           "exec": "pnpm i --frozen-lockfile"
+        },
+        {
+          "exec": "npx playwright install --with-deps chromium"
         }
       ]
     },
