--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,17 @@ jobs:
         run: npx projen build
       - name: Scrape
         run: npx projen scrape
+      - id: verify-changed-files
+        uses: tj-actions/verify-changed-files@v20
+        with:
+          files: awsiamactions.json
+      - if: ${{ steps.verify-changed-files.outputs.files_changed == 'true' }}
+        uses: peter-evans/create-pull-request@v6
+        with:
+          add-paths: awsiamactions.json
+          commit-message: "chore: updates awsiamactions.json"
+          title: "chore: updates awsiamactions.json"
+          body: Updates `awsiamactions.json`.
       - name: Find mutations
         id: self_mutation
         run: |-
