feat: pass filename to command too

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -189,7 +189,7 @@
       "name": "scrape",
       "steps": [
         {
-          "exec": "tsx src/index.ts"
+          "exec": "tsx src/index.ts awsiamactions.json"
         }
       ]
     },
