--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
         run: |-
           git config user.name "github-actions"
           git config user.email "github-actions@github.com"
+      - name: Install Playwright dependencies
+        run: npx playwright install --with-deps chromium
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
