--- a/.github/workflows/upgrade-main.yml
+++ b/.github/workflows/upgrade-main.yml
@@ -18,6 +18,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: main
+      - name: Install Playwright dependencies
+        run: npx playwright install --with-deps chromium
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
         with:
