--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "inlineSourceMap": true,
     "inlineSources": true,
     "lib": [
-      "es2019"
+      "es2019",
+      "DOM"
     ],
     "module": "CommonJS",
     "noEmitOnError": false,
