--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,10 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 9.3.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.14.0
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
       - name: build
