--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,10 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 9.3.0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.14.0
       - name: Install dependencies
         run: pnpm i --frozen-lockfile
       - name: release
@@ -67,7 +71,7 @@ jobs:
     steps:
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.14.0
       - name: Download build artifacts
         uses: actions/download-artifact@v4
         with:
