--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "@types/json-stable-stringify": "^1.0.36",
-    "@types/node": "^18",
+    "@types/node": "^20",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
     "constructs": "^10.0.0",
@@ -45,6 +45,9 @@
     "tsx": "^4.15.5"
   },
   "pnpm": {},
+  "engines": {
+    "node": ">= 20.14.0"
+  },
   "main": "lib/index.js",
   "license": "Apache-2.0",
   "publishConfig": {
