--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "@typescript-eslint/parser": "^7",
     "constructs": "^10.0.0",
     "eslint": "^8",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
     "projen": "^0.82.6",
     "standard-version": "^9",
     "ts-node": "^10.9.2",
