--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ name: build
 on:
   pull_request: {}
   workflow_dispatch: {}
+  schedule:
+    - cron: 5 8 * * MON
 jobs:
   build:
     runs-on: ubuntu-latest
