--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,8 @@ jobs:
           commit-message: "chore: updates awsiamactions.json"
           title: "chore: updates awsiamactions.json"
           body: Updates `awsiamactions.json`.
-      - env:
+      - if: ${{ steps.create-pull-request.outputs.pull-request-number }}
+        env:
           GH_TOKEN: ${{ github.token }}
         run: gh pr review ${{ steps.create-pull-request.outputs.pull-request-number }} --approve
       - name: Find mutations
