--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   pull_request: {}
   workflow_dispatch: {}
   schedule:
-    - cron: 5 8 * * MON
+    - cron: 0 1 * * *
 jobs:
   build:
     runs-on: ubuntu-latest
